--- a/index.html
+++ b/index.html
@@ -15,16 +15,15 @@
 <span>Lorem ipsum</span>
 
 <p>
-    Lorem ipsum dolor sit amet consectetur
-    adipisicing elit. Laudantium beatae suscipit vel ex tempore officiis soluta repellendus, reiciendis, facilis, nemo omnis magni eos culpa!
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non eveniet expedita cupiditate enim quaerat eaque magnam facilis. 
     <br>
-    Ut aut accusantium dolores voluptas vero?
+    Placeat dolorum totam id illum, eos omnis inventore quae, voluptate porro vitae doloremque.
 </p>
 
 <!-- estilizando o texto -->
-<b>strong</b>
+<b>este texto ficará bold</b>
 <br>
-<strong>strong</strong>
+<strong>este texto ficará bold mas é strong</strong>
 <br>
 <i>este texto ficará itálico</i>
 <br>
@@ -32,5 +31,5 @@
 
 <!-- tags aninhadas / nested tags -->
 <p>
-    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae sunt beatae, accusantium qui ipsa dolores earum et ut ratione! Esse vel perspiciatis voluptatum odio, <b><i>inventore</i></b> excepturi cupiditate vitae neque ut?
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et possimus fugit at similique rem consequatur deserunt. <b><i>Asperiores</i></b> modi, corrupti enim assumenda magnam doloribus explicabo nulla, blanditiis praesentium minima sed impedit.
 </p>
