--- a/pag1.html
+++ b/pag1.html
@@ -19,7 +19,7 @@
 
     <div style="float: right">
         <input type="text" id="nome">
-        <button onclick="alert('oi '+nome.value)">Dizer oi</button>
+        <button onclick="alert('Olá '+nome.value)">Dizer oi</button>
     </div>
         
 </body>
