Código da vídeo aula de HTML

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <!-- estilizando o texto -->
 <b>este texto ficará bold</b>
 <br>
-<strong>este texto ficará bold mas é strong</strong>
+<strong>este texto ficará bold, mas é strong</strong>
 <br>
 <i>este texto ficará itálico</i>
 <br>
